# imesa-experiments

./: .gitignore  CMakeLists.txt  CMakePresets.json  Taskfile.yaml  justfile  make-2d-noise.sh
experiments/: CMakeLists.txt
experiments/scripts/: make-multi-robot-dataset-2d  plot-mean-residual  plot-yaml.py  run-experiment
experiments/scripts/helpers/: method_style_sheet.py  summarize_experiment.py  summarize_timing.py
experiments/src/: factory.cpp
